b4e3d7d Tue Feb 4 11:42:40 2020 -0300 Update index.html
9af4823 Mon Nov 18 15:58:46 2019 -0300 Merge pull request #2 from appwebd/development
a080a92 Mon Nov 18 15:55:23 2019 -0300 Updated CHANGELOG
19e6c6d Mon Nov 18 15:50:43 2019 -0300 spelling error was updated
b4809de Mon Nov 18 15:44:32 2019 -0300 Merge pull request #1 from appwebd/development
901057c Mon Nov 18 15:40:13 2019 -0300 some properties of the style sheet were restored
bf30533 Sun Sep 22 23:30:33 2019 -0300 Update index.html
3c8b08f Fri Sep 13 14:47:26 2019 -0300 was fixed issue in cascade style sheet (Font not found). And fixed issue with images (reported by  Google search console)
f9a003f Thu Sep 12 21:32:59 2019 -0300 Hreflang tag added
ebdba31 Fri Apr 12 13:11:55 2019 -0400 was updated tag  canonical
574d262 Tue Apr 9 10:49:04 2019 -0400 Was changed text, to improve more visual aspect.
558697e Sun Apr 7 14:55:47 2019 -0400 was added some features like microdata
056bcdc Sun Apr 7 14:54:00 2019 -0400 was added an image for the profile web page.
576c4b3 Tue Mar 26 11:01:56 2019 -0300 Add Sitemap Location To Robots.txt File
5e399bc Tue Mar 26 10:42:20 2019 -0300 Add Sitemap Location To Robots.txt File
7c57f0d Mon Mar 18 16:09:46 2019 -0300 The famous Google console report "Los elementos en los que se puede hacer clic están demasiado cerca unos de otros", Test, try to give more space between lines.
52c42a8 Sun Mar 17 17:31:13 2019 -0300 fixing issue with stylesheet & Javascript defer don't run with lib owl.carousel.min.js
2cd9304 Sun Mar 17 16:51:20 2019 -0300 fixing issue with stylesheet
14c57e9 Sun Mar 17 16:48:10 2019 -0300 fixing issue with stylesheet
5bb1225 Sat Mar 16 14:45:49 2019 -0300 Reduce resolution of images. Test with https://www.webpagetest.org
a9e3f85 Sat Mar 16 14:36:12 2019 -0300 remove defer of <script  type="text/javascript">
193da21 Sat Mar 16 14:33:54 2019 -0300 reverse the famous preload with javascript loading css