@@ -138,10 +138,7 @@
                         itemprop="url">&#112;&#097;&#116;&#114;&#105;&#099;&#105;&#111;&#045;&#114;&#111;&#106;&#097;&#115;&#111;&#064;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#046;&#099;&#111;&#109;</a></p>
                   </span></div>
               </div>
-              <div class="row text-left">
-                <div class=col-sm-1>
-                  <p><i class="fa fa-phone fa-2x" aria-hidden=true></i></p>
-                </div>
+              
 
               </div>
               <div class="row text-left">
