@@ -1,3 +1,4 @@
+cb1a443 Wed Jul 8 15:26:46 2020 -0400 Phone number changed (was removed item of web page).
 b4e3d7d Tue Feb 4 11:42:40 2020 -0300 Update index.html
 9af4823 Mon Nov 18 15:58:46 2019 -0300 Merge pull request #2 from appwebd/development
 a080a92 Mon Nov 18 15:55:23 2019 -0300 Updated CHANGELOG
